# UScreen

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/uscreen/: MainActivity.kt  Prefs.kt  StreamingService.kt  TouchCapture.kt  VideoReceiver.kt
android/app/src/main/res/values/: themes.xml
gui/: Cargo.toml
gui/src/: main.rs
host/: Cargo.toml
host/evdi/: evdi_capture_test.c  evdi_drm.h  evdi_grab_test.c  evdi_helper.c  evdi_lib.h  evdi_test2.c
host/src/: capture.rs  config.rs  edid.rs  input.rs  main.rs  screencap.rs  stream.rs  vdisplay.rs
scripts/: 51-uscreen.rules  gen-edid.py  install.sh  uscreen-connect  uscreen.desktop  uscreen.service  virtual-display-setup.sh
