[package]
name = "uscreen"
version = "0.1.0"
edition = "2021"
description = "Low-latency USB display server - turns your Android tablet into a second monitor"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.21"
libc = "0.2"
zbus = { version = "4", features = ["tokio"] }
toml = "0.8"
